# rc2025

./: .gitignore  COMMIT_EDITMSG  DEVELOPMENT_LOG.md  README.md
catkin_ws/devel/include/amcl/: AMCLConfig.h
catkin_ws/devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
catkin_ws/devel/include/global_planner/: GlobalPlannerConfig.h
catkin_ws/devel/include/teb_local_planner/: TebLocalPlannerReconfigureConfig.h
catkin_ws/devel/include/user_msgs/: CannonStatus.h  CarCmd.h  ExitCondition.h  GimbalPoseDeg.h  ObjBbox.h  ObjDet.h  ObjDets.h  PID.h
catkin_ws/devel/lib/amcl/: amcl
catkin_ws/devel/lib/apriltag_localization/: apriltag_localization_node
catkin_ws/devel/lib/arm/: arm_ik_node
catkin_ws/devel/lib/ascamera/: ascamera_node
catkin_ws/devel/lib/base_local_planner/: point_grid
catkin_ws/devel/lib/cartographer_ros/: cartographer_assets_writer  cartographer_dev_pbstream_trajectories_to_rosbag  cartographer_dev_rosbag_publisher  cartographer_dev_trajectory_comparison  cartographer_occupancy_grid_node  cartographer_pbstream_map_publisher  cartographer_pbstream_to_ros_map  cartographer_rosbag_validate
catkin_ws/devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
catkin_ws/devel/lib/costmap_converter/: standalone_converter
catkin_ws/devel/lib/ddynamic_reconfigure/: ddynamic_reconfigure_auto_update_test  fake_dynamic_reconfigure_server  test_bool_dynamic_reconfigure_server
catkin_ws/devel/lib/deepseek/: deepseek_node
catkin_ws/devel/lib/fake_localization/: fake_localization
catkin_ws/devel/lib/global_planner/: planner
catkin_ws/devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
catkin_ws/devel/lib/hector_compressed_map_transport/: map_to_image_node
catkin_ws/devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
catkin_ws/devel/lib/hector_imu_attitude_to_tf/: imu_attitude_to_tf_node
catkin_ws/devel/lib/hector_imu_tools/: pose_and_orientation_to_imu_node
catkin_ws/devel/lib/hector_map_server/: hector_map_server
catkin_ws/src/actuator/servo_control/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/actuator/servo_control/scripts/: servo_node.py
catkin_ws/src/user_msgs/: CMakeLists.txt
catkin_ws/src/user_params/: CMakeLists.txt
mission_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
mission_ws/src/mission/fruit_picking_mission/: CMakeLists.txt  package.xml
mission_ws/src/mission/fruit_picking_mission/action/: PickFruit.action
mission_ws/src/mission/fruit_picking_mission/scripts/: mission_manager.py
(+412 files in other folders)
