<?xml version="1.0"?>
<package format="2">
  <name>servo_control</name>
  <version>0.0.1</version>
  <description>一个简单的舵机控制节点示例</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
